User can view following / followers list through the profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
         </activity>
         <activity android:name=".Activities.ProfileActivity" >
         </activity>
+        <activity android:name=".Activities.FollowActivity" >
+        </activity>
     </application>
 
 </manifest>
