--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+        <meta-data
+        android:name="AA_MODELS"
+        android:value="com.codepath.apps.mysimpletweets.models.Tweet, com.codepath.apps.mysimpletweets.models.User"/>
 
         <activity
             android:name=".Activities.LoginActivity"
